@@ -1,3 +1,13 @@
+2009-11-03  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* python/things/command/list.py:
+	  Add l alias for list.
+	* python/things/command/thing.py:
+	  Allow entering due date with D: instead of tracebacking.
+	* python/things/command/main.py:
+	  Use self.stdout
+	  Fix done for recurring tasks.
+
 2009-11-02  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* python/things/common/parse.py:
